# cnn-example

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini  train.py
cnn_example/config/: config.py
cnn_example/data/: __init__.py  data.py  dataloader.py  transforms.py
cnn_example/trainer/: __init__.py  resnet18.py  resnet50.py  trainer.py
cnn_example/utils/: experiment.py
config/: config.yaml
config/data/: cifar10.yaml
config/logger/: tensorboard.yaml
config/preprocess/: augmentation.yaml  baseline.yaml
config/train/: resnet18.yaml  resnet50.yaml
scripts/: 0001_train_resnet18.sh  0002_train_resnet50.sh  0003_train_resnet18_augmentation.sh  0003_train_resnet18_horizontal_flip.sh  0004_train_resnet50_augmentation.sh  0005_train_resnet18_augmentation_rot10.sh  0006_train_resnet50_augmentation_rot10.sh
visualize/: docker-compose.yml  visualize.ipynb
