[tool.poetry]
name = "cnn-example"
version = "0.1.0"
description = ""
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.0.3"
numpy = "^1.19.2"
omegaconf = "^2.0.2"
pillow = "^7.2.0"
pytorch-lightning = "^0.9.0"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.4"
mypy = "^0.782"
pytest = "^6.1.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
